# GPT-Conversation-Assistance-re

./: package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  response.txt  tauri.conf.json
src-tauri/src/: main.rs
src/components/organisms/recorder/: index.tsx  recorder.ts
